freest/test/prog/Valid/SessionTypes/SendAndClose/SendAndClose.fst
module SendAndClose where

main : Int
main = forkWith (sendAndClose 5) |> receiveAndWait
