freest/test/prog/Invalid/Typing/TypeCtxMismatchFunGuards/TypeCtxMismatchValGuards.fst
module TypeCtxMismatchFunGuards where

foo : Int -> Close -> ()
foo n c | n > 0     = close c
        | otherwise = ()